--- a/tbaaccesstest.html
+++ b/tbaaccesstest.html
@@ -22,11 +22,12 @@
                 console.log(data);
                 $('#dump').html("");
                 $('#dump').html("<table id=\"my-table\" class=\"table table-striped table-bordered\" cellspacing=\"0\" width=\"100% \" border=\"1\"></table>");
-                $('#my-table').append("<thead><tr><th>Number</th><th>Name</th><th>Ranking</th><th>OPR</th><th>AVG RP</th><th>Division</th></tr></thead>");
+                $('#my-table').append("<thead><tr><th>Number</th><th>Name</th><th>Ranking</th><th>OPR</th><th>AVG RP</th><th>Division</th><th>Awards</th></tr></thead>");
                 $('my-table').append("<tbody>");
                 var count = 0;
                 var totalrp = 0;
                 var totalopr = 0;
+                var totalawards = 0;
                 $.each(data, function (index, element) {
                     count++;
                     totalrp += element.averagerp;
@@ -39,13 +40,24 @@
                         $('<td>').text(element.averagerp),
                         $('<td>').text(element.division)
                     );
+                    var awardtext = "";
+                    if (element.awards != null) {
+                        $.each(element.awards, function (index, element) {
+                            if (index != 0) {
+                                awardtext += "<br />";
+                            }
+                            awardtext += element;
+                            totalawards++;
+                        });
+                    }
+                    $tr.append($('<td>').html(awardtext));
                     $('#my-table').append("<tr>" + $tr.html() + "</tr>");
                 });
                 $('my-table').append("</tbody>");
                 $('#my-table').dynatable();
                 var averagerp = totalrp / count;
                 var averageopr = totalopr / count;
-                $('#stats').html("Average District RP: " + Math.floor(averagerp*100)/100 + " Average District OPR: " + Math.floor(averageopr*100)/100);
+                $('#stats').html("Average District RP: " + Math.floor(averagerp*100)/100 + " Average District OPR: " + Math.floor(averageopr*100)/100 + " Total Awards: " + totalawards);
             });
         }
     </script>
