update playoff tracking to account for states where level if still qf/sf but status is 'won' before the field posts the SF schedule

--- a/tbaaccesstest.html
+++ b/tbaaccesstest.html
@@ -59,8 +59,14 @@
                             $('<td>').text(element.playoffdata.status)
                         );
                         totalqf++;
+                        if (element.playoffdata.level == "qf" && element.playoffdata.status == "won") {
+                            totalsf++;
+                        }
                         if (element.playoffdata.level == "sf") {
                             totalsf++;
+                        }
+                        if (element.playoffdata.level == "sf" && element.playoffdata.status == "won") {
+                            totalf++;
                         }
                         if (element.playoffdata.level == "f") {
                             totalsf++;
