Updated for 2019 - pit feature disabled

--- a/tbaaccesstest.html
+++ b/tbaaccesstest.html
@@ -20,7 +20,7 @@
     <script src="./tbawrappers.js"></script>
     <script src="./jquery.dynatable.js"></script>
     <script>
-        var year = 2018;
+        var year = 2019;
         var district = 'ne';
 
         function populateTeamData(district, year) {
@@ -116,6 +116,7 @@
 <body>
     <div id="yearselector">
         <select id="yearchooser">
+            <option value="2019">2019</option>
             <option value="2018">2018</option>
             <option value="2017">2017</option>
         </select>
