--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="./js/tbawrappers.js"></script>
     <script src="./js/jquery.dynatable.js"></script>
     <script>
-        var year = 2022;
+        var year = 2023;
         var district = 'ne';
 
         function populateTeamData(district, year) {
@@ -143,6 +143,7 @@
     <div id="selector">
         <b>Season:</b>
         <select id="yearchooser">
+            <option value="2023">2023</option>
             <option value="2022">2022</option>
             <option value="2020">2020</option>
             <option value="2019">2019</option>
