--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
     <div id="selector">
         <b>Season:</b>
         <select id="yearchooser">
+            <option value="2024">2024</option>
             <option value="2023">2023</option>
             <option value="2022">2022</option>
             <option value="2020">2020</option>
